--- a/vues/page.ejs
+++ b/vues/page.ejs
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="styles/adaptative.css" />
         <link rel="stylesheet" href="styles/modulaire.css">
 
-        <!--POLICE D'ECRITURE-->
+        <!--POLICE D'ECRITURE 'Roboto'-->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
@@ -44,7 +44,6 @@
     </head>
     <body>
         <header>
-            <h1 id="titre" style="display: none;">Convertisseurs</h1>
             <nav class="card-container">
                 <% convertisseurs.forEach((conv)=>{ %>
                 <a
@@ -61,8 +60,6 @@
         <main id="main">
 
         </main>
-        <footer style="display: none">
-            <h3 id="nom">Paul Marchal</h3>
-        </footer>
+
     </body>
 </html>
