--- a/public/partials/accueil.html
+++ b/public/partials/accueil.html
@@ -3,8 +3,8 @@
     <p>Bienvenue sur {nom du site super cool}.</p>
     <h2 class="attention">Site en construction !</h2>
     <p>
-        Il se peut que vous rencontriez quelques problèmes de mise en page,
-        de faux calculs ou bien même un accès impossible au site. Nous vous
+        Il se peut que vous rencontriez quelques problèmes de mise en page, de
+        faux calculs ou bien même un accès impossible au site. Nous vous
         remercions de votre patience.
     </p>
     <h4>Liste des convertisseurs en développement :</h4>
@@ -15,8 +15,8 @@
         <li>Puissance (en étude)</li>
     </ul>
     <h4 id="acc-footer">
-        Made with <span style="color: red">♥</span> by Paul Marchal,
-        version alpha 21.22
+        Made with <span style="color: red">♥</span> by Paul Marchal, version
+        alpha 21.22
     </h4>
 </div>
 <style>
