--- a/public/partials/accueil.html
+++ b/public/partials/accueil.html
@@ -1,11 +1,20 @@
 <div id="accueil-wrapper">
     <h1>Accueil</h1>
-    <p>Bienvenue sur {nom du site super cool}.</p>
+    <p>
+        Bienvenue sur {nom du site super cool}. C'est un site de convertisseurs
+        (distances, monnaies, températures, vitesses et bases) très simple et
+        performant.
+    </p>
     <h2 class="attention">Site en construction !</h2>
     <p>
         Il se peut que vous rencontriez quelques problèmes de mise en page, de
         faux calculs ou bien même un accès impossible au site. Nous vous
         remercions de votre patience.
+    </p>
+    <p>
+        Ce site a un dépot
+        <a href="https://github.com/lamarch/convertisseurs-site.git">Github</a>,
+        n'hésitez pas à participer !
     </p>
     <h4>Liste des convertisseurs en développement :</h4>
     <ul style="text-align: left">
