Ajout des masses et des puissances

--- a/public/partials/accueil.html
+++ b/public/partials/accueil.html
@@ -18,10 +18,9 @@
     </p>
     <h4>Liste des convertisseurs en développement :</h4>
     <ul style="text-align: left">
-        <li>Poids (en étude)</li>
         <li>Surface (en étude)</li>
         <li>Volume (en étude)</li>
-        <li>Puissance (en étude)</li>
+        <li>Temps (en étude)</li>
     </ul>
     <h4 id="acc-footer">
         Made with <span style="color: red">♥</span> by Paul Marchal, version
