Ajout de la version sur base de la date/heure/commit

--- a/public/partials/accueil.html
+++ b/public/partials/accueil.html
@@ -24,7 +24,7 @@
     </ul>
     <h4 id="acc-footer">
         Made with <span style="color: red">♥</span> by Paul Marchal, version
-        alpha 21.22
+        <span id="version-ctr"></span>
     </h4>
 </div>
 <style>
