--- a/vues/page.ejs
+++ b/vues/page.ejs
@@ -41,6 +41,10 @@
             crossorigin="anonymous"
         ></script>
 
+        <script>        
+        window.version = "<%-version%>"
+        </script>
+
     </head>
     <body>
         <header>
@@ -62,4 +66,5 @@
         </main>
 
     </body>
+
 </html>
