--- a/public/styles/modules/input.range.css
+++ b/public/styles/modules/input.range.css
@@ -45,15 +45,12 @@ input[type='range']::-moz-range-thumb {
 Ligne de course du bitonio
 */
 input[type='range']::-webkit-slider-runnable-track,
-input[type='range']::-moz-range-track {
+input[type='range']::-moz-range-track,
+input[type='range']::-ms-track {
     width: 100%;
     height: 8px;
     cursor: pointer;
     background: var(--imp-background);
     border-radius: 3px;
     border: 1px solid var(--border-focus);
-}
-
-input[type='range']:focus::-webkit-slider-runnable-track {
-    background: #367ebd;
 }
