--- a/public/styles/modules/input.range.css
+++ b/public/styles/modules/input.range.css
@@ -1,56 +1,51 @@
-/*
-Reset style à 0
-*/
 input[type='range'] {
-    appearance: none; /* Hides the slider so that custom slider can be made */
-    width: 100%; /* Specific width is required for Firefox. */
-    background: transparent; /* Otherwise white in Chrome */
-}
-
-input[type='range']::-webkit-slider-thumb {
-    appearance: none;
+    height: 32px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+    background-color: transparent;
 }
 
 input[type='range']:focus {
-    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+    outline: none;
 }
 
-input[type='range']::-ms-track {
+input[type='range']::-webkit-slider-runnable-track {
     width: 100%;
+    height: 10px;
     cursor: pointer;
-
-    /* Hides the slider so custom styles can be added */
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
+    box-shadow: 0px 0px 0px #000000;
+    background: var(--background);
+    border-radius: 25px;
+    border: 1px solid var(--border);
 }
 
-/*
-Bitonio
-*/
-input[type='range']::-webkit-slider-thumb,
-input[type='range']::-moz-range-thumb {
-    appearance: none;
-    border: 1px solid;
-    border-color: var(--border-focus);
+input[type='range']::-moz-range-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px #000000;
+    background: var(--background);
+    border-radius: 25px;
+    border: 1px solid var(--border);
+}
+
+input[type='range']::-webkit-slider-thumb {
+    border: 1px solid var(--border-focus);
     height: 20px;
     width: 20px;
-    border-radius: 100%;
+    border-radius: 6px;
     background: var(--background-focus);
     cursor: pointer;
-    margin-top: -14px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+    -webkit-appearance: none;
+    margin-top: -6.5px;
 }
 
-/*
-Ligne de course du bitonio
-*/
-input[type='range']::-webkit-slider-runnable-track,
-input[type='range']::-moz-range-track,
-input[type='range']::-ms-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    background: var(--imp-background);
-    border-radius: 3px;
+input[type='range']::-moz-range-thumb {
     border: 1px solid var(--border-focus);
+    height: 20px;
+    width: 20px;
+    border-radius: 6px;
+    background: var(--background-focus);
+    cursor: pointer;
 }
