--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,8 +1,9 @@
 :root {
-    --color: #505768;
+    --color: #20242c;
     --border: #aab3c4;
     --background: #fff;
     --imp-background: #cad4e7;
+    --main-background: rgb(238, 235, 252);
     --placeholder: #9ca0a8;
 
     --border-focus: #275efe;
@@ -10,10 +11,24 @@
     --background-focus: #4267d6;
 }
 
+.dark-theme:root {
+    --color: #d3cfc9;
+    --border: #444a4d;
+    --background: #000;
+    --imp-background: #1d2021;
+    --main-background: #181a1b;
+    --placeholder: #9ca0a8;
+
+    --border-focus: #275efe;
+    --color-focus: #fff;
+    --background-focus: #22409b;
+}
+
 html {
     box-sizing: border-box;
     overflow-y: scroll;
-    background-color: rgb(238, 235, 252);
+    background-color: var(--main-background);
+    color: var(--color);
 }
 
 body {
@@ -35,5 +50,5 @@ h3 {
 }
 
 * {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
