Maj page d'accueil

--- a/public/partials/accueil.html
+++ b/public/partials/accueil.html
@@ -2,7 +2,7 @@
     <h1>Accueil</h1>
     <p>
         Bienvenue sur {nom du site super cool}. C'est un site de convertisseurs
-        (distances, monnaies, températures, vitesses et bases) très simple et
+        (distances, monnaies, températures, vitesses, bases...) très simple et
         performant.
     </p>
     <h2 class="attention">Site en construction !</h2>
