--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,5 @@
+@import 'adaptatives/main.css';
+
 #main {
     text-align: center;
     padding: 15px;
@@ -29,8 +31,14 @@ Hiérarchie :
     top: 0px;
     z-index: 3;
     text-align: left;
-    padding: 15px;
+    padding: 10px;
+    border: solid 5px var(--imp-background);
     border-radius: 6px;
+    transition: border-color 0.3s ease;
+}
+
+.sub-form:focus-within > h1 {
+    border-color: var(--border-focus);
 }
 
 /*Contenant d'une entrée du convertisseur*/
