--- a/vues/page.ejs
+++ b/vues/page.ejs
@@ -49,7 +49,7 @@
 
                     <% convertisseurs.forEach((conv)=>{ %>
                         <a
-                        href="<%=conv.adresse%>"
+                        href="<%=conv.adresse.slice(0, -3)%>"
                         style="text-decoration: none"
                         class="card <%= conv.adresse == convertisseur.adresse ? "selected-card" : ""%>"
                         >
