--- a/public/styles/bases.css
+++ b/public/styles/bases.css
@@ -26,7 +26,7 @@
 
 html {
     box-sizing: border-box;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: var(--main-background);
     color: var(--color);
 }
