Ajout d'un favicon perso

--- a/vues/page.ejs
+++ b/vues/page.ejs
@@ -8,7 +8,7 @@
         <!--On charge un petit icone-->
         <link
             rel="shortcut icon"
-            href="https://cdn3.iconfinder.com/data/icons/chooseanycolor/128/ico-512.png"
+            href="favicon.png"
             type="image/x-icon"
         />
 
