--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,3 @@
-
 header {
     width: 100%;
     z-index: 9;
@@ -12,7 +11,7 @@ header {
     justify-content: center;
 }
 
-.header-nav-list {
+.menu-list {
     margin: 0 1em;
 }
 
@@ -24,18 +23,9 @@ header {
 }
 
 /*
-Contenant pour les éléments du menu
-*/
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-/*
 Elément du menu
 */
-.card {
+.menu-item {
     box-sizing: border-box;
     border: 1px solid var(--border);
     padding: 0.5em;
@@ -47,25 +37,17 @@ Elément du menu
 }
 
 /*Elément du menu séléctionné*/
-.card.selected-card {
+.menu-item.selected-card {
     border-color: var(--border-focus);
     color: var(--color-focus);
     background-color: var(--background-focus);
 }
 
-.card:hover:not(.selected-card) {
+.menu-item:hover:not(.selected-card) {
     background-color: var(--imp-background);
 }
 
-.card:first-child {
-    border-radius: 6px 0 0 6px;
-}
-
-.card:last-child {
-    border-radius: 0 6px 6px 0;
-}
-
-.card a {
+.menu-item a {
     padding: 0;
     text-decoration: none;
 }
