Partie 1 : CSS grid verticale

--- a/vues/page.ejs
+++ b/vues/page.ejs
@@ -36,7 +36,8 @@
             crossorigin="anonymous"
         ></script>
 
-        <script src="dark_theme_script.js" defer></script>
+        <script src="scripts/dark_theme_script.js" defer></script>
+        <script src="scripts/screen_size.js"></script>
 
         <script>        
         window.version = "<%-version%>"
