Modification CSS -> SCSS pour pllus de modularité

--- a/public/styles/adaptatives.css
+++ b/public/styles/adaptatives.css
@@ -1,2 +1,4 @@
-@import 'adaptatives/header.css';
-@import 'adaptatives/main.css';
+@import "adaptatives/header.css";
+@import "adaptatives/main.css";
+
+/*# sourceMappingURL=adaptatives.css.map */
