--- a/public/styles/adaptatives/header.css
+++ b/public/styles/adaptatives/header.css
@@ -1,9 +1,13 @@
 @media only screen and (max-width: 710px) {
-    .header-nav {
-        flex-direction: column !important;
-    }
+  .header-nav {
+    flex-direction: column !important;
+    padding: 10px;
+  }
 
-    #theme-switch-ctr {
-        margin: 0 auto 10px auto !important;
-    }
+  #theme-switch-ctr {
+    margin: 0 auto;
+    margin-top: 10px;
+  }
 }
+
+/*# sourceMappingURL=header.css.map */
