--- a/public/styles/adaptatives/main.css
+++ b/public/styles/adaptatives/main.css
@@ -1,55 +1,57 @@
+@charset "UTF-8";
 /*
 
 Fichier CSS de modification pour les écrans mobiles.
 
 */
-
 @media only screen and (max-width: 710px) {
-    .card-container {
-        flex-direction: column;
-    }
+  .card-container {
+    flex-direction: column;
+  }
 
-    .card {
-        margin: 0;
-    }
+  .card {
+    margin: 0;
+  }
 
-    .card:first-child {
-        border-radius: 6px 6px 0 0;
-    }
+  .card:first-child {
+    border-radius: 6px 6px 0 0;
+  }
 
-    .card:last-child {
-        border-radius: 0 0 6px 6px;
-    }
+  .card:last-child {
+    border-radius: 0 0 6px 6px;
+  }
 
-    .convertisseur {
-        width: 100% !important;
-    }
+  .convertisseur {
+    width: 100% !important;
+  }
 
-    .entree {
-        flex-direction: column;
-    }
+  .entree {
+    flex-direction: column;
+  }
 
-    .entree > * {
-        width: 100% !important;
-    }
+  .entree > * {
+    width: 100% !important;
+  }
 
-    .entree > :first-child {
-        border-radius: 6px 6px 0 0 !important;
-    }
+  .entree > :first-child {
+    border-radius: 6px 6px 0 0 !important;
+  }
 
-    .entree > :last-child {
-        border-radius: 0 0 6px 6px !important;
-    }
+  .entree > :last-child {
+    border-radius: 0 0 6px 6px !important;
+  }
 
-    /*
-Pour tous les éléments n'étant pas en début de ligne, on les décale vers la gauche pour plus de beauté
-*/
-    .entree > :not(:first-child) {
-        margin-left: 0px;
-        margin-top: -1px;
-    }
+  /*
+  Pour tous les éléments n'étant pas en début de ligne, on les décale vers la gauche pour plus de beauté
+  */
+  .entree > :not(:first-child) {
+    margin-left: 0px;
+    margin-top: -1px;
+  }
 
-    #label-precision {
-        margin-bottom: 15px;
-    }
+  #label-precision {
+    margin-bottom: 15px;
+  }
 }
+
+/*# sourceMappingURL=main.css.map */
