--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -1,10 +1,12 @@
 footer {
-    width: 100%;
-    background-color: cyan;
-    text-align: center;
-    z-index: 2;
+  width: 100%;
+  background-color: cyan;
+  text-align: center;
+  z-index: 2;
 }
 
 footer > h3 {
-    font-size: 20sp;
+  font-size: 20sp;
 }
+
+/*# sourceMappingURL=footer.css.map */
