--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,53 +1,54 @@
+@charset "UTF-8";
 header {
-    width: 100%;
-    z-index: 9;
-    background-color: var(--imp-background);
-    transition: background-color 0.3s ease;
+  width: 100%;
+  z-index: 9;
+  background-color: var(--imp-background);
+  transition: background-color 0.3s ease;
 }
 
 .header-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .menu-list {
-    margin: 0 1em;
+  margin: 0 1em;
 }
 
 #theme-switch-ctr {
-    margin-left: auto;
-    justify-self: flex-end;
-    align-self: center;
-    margin-right: 10px;
+  margin-left: auto;
+  justify-self: flex-end;
+  align-self: center;
+  margin-right: 10px;
+  text-align: center;
 }
 
 /*
 Elément du menu
 */
 .menu-item {
-    padding: 0.5em;
-    margin: 1em 0;
-
-    border: 1px solid var(--border);
-    background-color: var(--background);
-    color: var(--color);
-
-    text-align: center;
-    font-size: larger;
-
-    transition: background-color 0.1s ease;
+  padding: 0.5em;
+  margin: 1em 0;
+  border: 1px solid var(--border);
+  background-color: var(--background);
+  color: var(--color);
+  text-align: center;
+  font-size: larger;
+  transition: background-color 0.1s ease;
 }
 
 /*Elément du menu séléctionné*/
 .menu-item.selected-card,
 .menu-item:hover {
-    border-color: var(--border-focus);
-    color: var(--color-focus);
-    background-color: var(--background-focus);
+  border-color: var(--border-focus);
+  color: var(--color-focus);
+  background-color: var(--background-focus);
 }
 
 .menu-item a {
-    padding: 0;
-    text-decoration: none;
+  padding: 0;
+  text-decoration: none;
 }
+
+/*# sourceMappingURL=header.css.map */
