--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,8 @@
+@charset "UTF-8";
 #main {
-    text-align: center;
-    padding: 15px;
-    height: 100%;
+  text-align: center;
+  padding: 15px;
+  height: 100%;
 }
 
 /*
@@ -12,107 +13,106 @@ Hiérarchie :
     -input
     -label
 */
-
 /*Elément d'un convertisseur*/
 .convertisseur {
-    margin: auto;
-    width: 600px;
-    display: flex;
-    flex-direction: column;
-    font-size: 18px;
+  margin: auto;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
 }
 
 /*Elément d'un groupe du convertisseur*/
 .groupe > h1 {
-    position: sticky;
-    background-color: var(--imp-background);
-    top: 0px;
-    z-index: 3;
-    text-align: left;
-    padding: 10px;
-    border: solid 5px var(--imp-background);
-    border-radius: 6px;
-    transition: border-color 0.3s ease;
+  position: sticky;
+  background-color: var(--imp-background);
+  top: 0px;
+  z-index: 3;
+  text-align: left;
+  padding: 10px;
+  border: solid 5px var(--imp-background);
+  border-radius: 6px;
+  transition: border-color 0.3s ease;
 }
 
 .groupe:focus-within > h1 {
-    border-color: var(--border-focus);
+  border-color: var(--border-focus);
 }
 
 /*Contenant d'une entrée du convertisseur*/
 .entree {
-    width: 100%;
-    margin: 10px 0;
+  width: 100%;
+  margin: 10px 0;
 }
 
 /*Input de l'entrée*/
 .entree > input {
-    display: block;
-    width: 100%;
-    padding: 8px 16px;
-    line-height: 25px;
-    -webkit-appearance: none;
-    color: var(--color);
-    border: 1px solid var(--border);
-    background: var(--background);
-    transition: border 0.3s ease;
-    font-size: 18px;
-    position: relative;
-    z-index: 1;
-    flex: 1 1 auto;
+  display: block;
+  width: 100%;
+  padding: 8px 16px;
+  line-height: 25px;
+  -webkit-appearance: none;
+  color: var(--color);
+  border: 1px solid var(--border);
+  background: var(--background);
+  transition: border 0.3s ease;
+  font-size: 18px;
+  position: relative;
+  z-index: 1;
+  flex: 1 1 auto;
 }
 
 /*Label contenant l'unité*/
 .entree > label {
-    text-align: center;
-    padding: 8px 12px;
-    line-height: 25px;
-    color: var(--color);
-    background: var(--imp-background);
-    border: 1px solid var(--border);
-    transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
-    width: 250px;
+  text-align: center;
+  padding: 8px 12px;
+  line-height: 25px;
+  color: var(--color);
+  background: var(--imp-background);
+  border: 1px solid var(--border);
+  transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
+  width: 250px;
 }
 
 /*
 Modifications de pseudo-classes et éléments : 
 */
-
 /*
 "Placeholder" de l'input
 */
 .entree > input::placeholder {
-    color: var(--placeholder);
+  color: var(--placeholder);
 }
 
 .entree > input:focus {
-    outline: none;
-    border-color: var(--border-focus);
+  outline: none;
+  border-color: var(--border-focus);
 }
 
 /*
 Lorsque l'on séléctionne l'entrée, on "illumine" le label correspondant
 */
 .entree:focus-within > label {
-    color: var(--color-focus);
-    background: var(--background-focus);
-    border-color: var(--border-focus);
+  color: var(--color-focus);
+  background: var(--background-focus);
+  border-color: var(--border-focus);
 }
 
 /*
 Styles pour la barre de définition de la précision
 */
-
 #precision-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #label-precision {
-    font-size: 1.25em;
+  font-size: 1.25em;
 }
 
 #precision {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
+
+/*# sourceMappingURL=main.css.map */
