--- a/public/styles/modulaire.css
+++ b/public/styles/modulaire.css
@@ -1,3 +1,5 @@
-@import 'modules/input.range.css';
-@import 'modules/h2.css';
-@import 'modules/cards.css';
+@import "modules/input.range.css";
+@import "modules/h2.css";
+@import "modules/cards.css";
+
+/*# sourceMappingURL=modulaire.css.map */
