--- a/public/styles/modules/h2.css
+++ b/public/styles/modules/h2.css
@@ -1,5 +1,7 @@
 h2.attention {
-    color: rgb(223, 85, 85);
-    border: 1px dashed red;
-    padding: 10px;
+  color: rgb(223, 85, 85);
+  border: 1px dashed red;
+  padding: 10px;
 }
+
+/*# sourceMappingURL=h2.css.map */
