--- a/vues/page.ejs
+++ b/vues/page.ejs
@@ -47,7 +47,7 @@
     <body>
         <header>
             <nav class="header-nav">
-                <div  class="menu-list card-container">
+                <div  class="menu-list horizontal-card-container switch-orientation">
 
                     <% convertisseurs.forEach((conv)=>{ %>
                         <a
