--- a/public/styles/adaptatives/header.css
+++ b/public/styles/adaptatives/header.css
@@ -1,7 +1,7 @@
-@media only screen and (max-width: 710px) {
+@media only screen and (max-width: 850px) {
   .header-nav {
     flex-direction: column !important;
-    padding: 10px;
+    padding: 10px !important;
   }
 
   #theme-switch-ctr {
