--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -12,16 +12,17 @@ header {
   justify-content: center;
 }
 
-.menu-list {
-  margin: 0 1em;
-}
-
 #theme-switch-ctr {
   margin-left: auto;
   justify-self: flex-end;
   align-self: center;
   margin-right: 10px;
   text-align: center;
+  display: none;
+}
+
+.menu-list {
+  margin: 1em;
 }
 
 /*
@@ -29,7 +30,6 @@ Elément du menu
 */
 .menu-item {
   padding: 0.5em;
-  margin: 1em 0;
   border: 1px solid var(--border);
   background-color: var(--background);
   color: var(--color);
