--- a/styles/adaptatives/header.scss
+++ b/styles/adaptatives/header.scss
@@ -2,7 +2,7 @@
 @media only screen and (max-width: $max-width) {
     .header-nav {
         flex-direction: column !important;
-        padding: 10px;
+        padding: 10px !important;
     }
 
     #theme-switch-ctr {
