--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,11 +1,16 @@
 header {
-    width: 100%;
+    height: 100%;
+    width: $sidebar-width;
+    position: fixed;
+    top: 0;
+    left: 0;
+
     z-index: 9;
+    overflow: auto;
+
     background-color: var(--imp-background);
     transition: background-color 0.3s ease;
-}
 
-.header-nav {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -52,4 +57,17 @@ Elément du menu
 .menu-item a {
     padding: 0;
     text-decoration: none;
+}
+
+@media only screen and (max-width: $max-width-1) {
+    header {
+        position: relative;
+        width: 100%;
+        height: auto;
+    }
+
+    #theme-switch-ctr {
+        margin: 0 auto;
+        margin-top: 10px;
+    }
 }
