--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*
-Concerne la base (:root, html & body)
+Concerne la base (variabes, :root, html & body)
 */
 :root {
   --color: #20242c;
