--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,17 +1,69 @@
-/* Error: Undefined variable.
- *   ,
- * 3 |     width: $sidebar-width;
- *   |            ^^^^^^^^^^^^^^
- *   '
- *   styles\header.scss 3:12  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 3 \2502      width: $sidebar-width;\d\a   \2502             ^^^^^^^^^^^^^^\a   \2575 \a   styles\\header.scss 3:12  root stylesheet";
+@charset "UTF-8";
+header {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  overflow: auto;
+  background-color: var(--imp-background);
+  transition: background-color 0.3s ease;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
+
+#theme-switch-ctr {
+  margin-left: auto;
+  justify-self: flex-end;
+  align-self: center;
+  margin-right: 10px;
+  text-align: center;
+  display: none;
+}
+
+.menu-list {
+  margin: 1em;
+}
+
+/*
+Elément du menu
+*/
+.menu-item {
+  padding: 0.5em;
+  border: 1px solid var(--border);
+  background-color: var(--background);
+  color: var(--color);
+  text-align: center;
+  font-size: larger;
+  transition: background-color 0.1s ease;
+}
+
+/*Elément du menu séléctionné*/
+.menu-item.selected-card,
+.menu-item:hover {
+  border-color: var(--border-focus);
+  color: var(--color-focus);
+  background-color: var(--background-focus);
+}
+
+.menu-item a {
+  padding: 0;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 875px) {
+  header {
+    position: relative;
+    width: 100%;
+    height: auto;
+  }
+
+  #theme-switch-ctr {
+    margin: 0 auto;
+    margin-top: 10px;
+  }
+}
+
+/*# sourceMappingURL=header.css.map */
