--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,17 +1,195 @@
-/* Error: Undefined mixin.
- *     ,
- * 140 |         @include vertical-card-container();
- *     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- *     '
- *   styles\main.scss 140:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
+@charset "UTF-8";
+.card {
+  box-sizing: border-box;
   display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a     \2577 \a 140 \2502          @include vertical-card-container();\d\a     \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a     \2575 \a   styles\\main.scss 140:9  root stylesheet";
 }
+.card:not(:first-child, :last-child) {
+  border-radius: 0 0 0 0;
+}
+
+.horizontal-card-container {
+  display: flex;
+  flex-direction: row;
+}
+.horizontal-card-container > .card:first-child {
+  border-radius: 6px 0 0 6px;
+}
+.horizontal-card-container > .card:not(:first-child) {
+  margin-left: -1px;
+}
+.horizontal-card-container > .card:last-child {
+  border-radius: 0 6px 6px 0;
+}
+
+.vertical-card-container {
+  display: flex;
+  flex-direction: column;
+}
+.vertical-card-container > .card:first-child {
+  border-radius: 6px 6px 0 0;
+}
+.vertical-card-container > .card:not(:first-child) {
+  margin-left: 0px;
+  margin-top: -1px;
+}
+.vertical-card-container > .card:last-child {
+  border-radius: 0 0 6px 6px;
+}
+
+#main {
+  margin-left: 250px;
+  text-align: center;
+  padding: 15px;
+  height: 100%;
+}
+
+/*
+Hiérarchie :
+-convertisseur
+-groupe
+-entree
+    -input
+    -label
+*/
+/*Elément d'un convertisseur*/
+.convertisseur {
+  margin: auto;
+  min-width: 600px;
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+}
+
+/*Elément d'un groupe du convertisseur*/
+.groupe > h1 {
+  position: sticky;
+  background-color: var(--imp-background);
+  top: 0px;
+  z-index: 3;
+  text-align: left;
+  padding: 10px;
+  border: solid 5px var(--imp-background);
+  border-radius: 6px;
+  transition: border-color 0.3s ease;
+}
+
+.groupe:focus-within > h1 {
+  border-color: var(--border-focus);
+}
+
+/*Contenant d'une entrée du convertisseur*/
+.entree {
+  width: 100%;
+  margin: 10px 0;
+}
+
+/*Input de l'entrée*/
+.entree > input {
+  display: block;
+  width: 100%;
+  padding: 8px 16px;
+  line-height: 25px;
+  -webkit-appearance: none;
+  color: var(--color);
+  border: 1px solid var(--border);
+  background: var(--background);
+  transition: border 0.3s ease;
+  font-size: 18px;
+  position: relative;
+  z-index: 1;
+  flex: 1 1 auto;
+}
+
+/*Label contenant l'unité*/
+.entree > label {
+  text-align: center;
+  padding: 8px 12px;
+  line-height: 25px;
+  color: var(--color);
+  background: var(--imp-background);
+  border: 1px solid var(--border);
+  transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
+  width: 250px;
+}
+
+/*
+Modifications de pseudo-classes et éléments : 
+*/
+/*
+"Placeholder" de l'input
+*/
+.entree > input::placeholder {
+  color: var(--placeholder);
+}
+
+.entree > input:focus {
+  outline: none;
+  border-color: var(--border-focus);
+}
+
+/*
+Lorsque l'on séléctionne l'entrée, on "illumine" le label correspondant
+*/
+.entree:focus-within > label {
+  color: var(--color-focus);
+  background: var(--background-focus);
+  border-color: var(--border-focus);
+}
+
+/*
+Styles pour la barre de définition de la précision
+*/
+#precision-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#label-precision {
+  font-size: 1.25em;
+}
+
+#precision {
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 875px) {
+  #main {
+    margin: 0;
+  }
+
+  .convertisseur {
+    min-width: 0 !important;
+  }
+}
+@media only screen and (max-width: 630px) {
+  .convertisseur {
+    width: 100% !important;
+  }
+
+  .entree {
+    display: flex;
+    flex-direction: column;
+  }
+  .entree > .card:first-child {
+    border-radius: 6px 6px 0 0;
+  }
+  .entree > .card:not(:first-child) {
+    margin-left: 0px;
+    margin-top: -1px;
+  }
+  .entree > .card:last-child {
+    border-radius: 0 0 6px 6px;
+  }
+
+  .entree > * {
+    width: 100% !important;
+  }
+
+  #label-precision {
+    margin-bottom: 15px;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
