--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,386 +1,13 @@
-@charset "UTF-8";
 /*
 Concerne la base (variabes, :root, html & body)
 */
-:root {
-  --color: #20242c;
-  --border: #aab3c4;
-  --background: #fff;
-  --imp-background: #b6c0d3;
-  --main-background: rgb(238, 235, 252);
-  --placeholder: #9ca0a8;
-  --border-focus: #275efe;
-  --color-focus: #fff;
-  --background-focus: #4267d6;
-}
-
-.dark-theme:root {
-  --color: #d3cfc9;
-  --border: #444a4d;
-  --background: #000;
-  --imp-background: #272b2c;
-  --main-background: #181a1b;
-  --placeholder: #9ca0a8;
-  --border-focus: #275efe;
-  --color-focus: #fff;
-  --background-focus: #22409b;
-}
-
-html {
-  box-sizing: border-box;
-  overflow-y: auto;
-  background-color: var(--main-background);
-  color: var(--color);
-}
-
-body {
-  margin: 0;
-  height: 100vh;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-h1,
-h3 {
-  margin: 0;
-}
-
-* {
-  font-family: "Roboto", sans-serif;
-}
+@import 'bases.css';
 
 /*
 Concerne tous les éléments
 */
-input[type=range] {
-  height: 32px;
-  -webkit-appearance: none;
-  margin: 10px 0;
-  width: 100%;
-  background-color: transparent;
-}
+@import 'modulaire.css';
 
-input[type=range]:focus {
-  outline: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 10px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px #000000;
-  background: var(--background);
-  border-radius: 25px;
-  border: 1px solid var(--border);
-}
-
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 10px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px #000000;
-  background: var(--background);
-  border-radius: 25px;
-  border: 1px solid var(--border);
-}
-
-input[type=range]::-webkit-slider-thumb {
-  border: 1px solid var(--border-focus);
-  height: 20px;
-  width: 20px;
-  border-radius: 6px;
-  background: var(--background-focus);
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -6.5px;
-}
-
-input[type=range]::-moz-range-thumb {
-  border: 1px solid var(--border-focus);
-  height: 20px;
-  width: 20px;
-  border-radius: 6px;
-  background: var(--background-focus);
-  cursor: pointer;
-}
-
-h2.attention {
-  color: #df5555;
-  border: 1px dashed red;
-  padding: 10px;
-}
-
-.card {
-  box-sizing: border-box;
-  display: block;
-}
-.card:not(:first-child, :last-child) {
-  border-radius: 0 0 0 0;
-}
-
-.horizontal-card-container {
-  display: flex;
-  flex-direction: row;
-}
-.horizontal-card-container > .card:first-child {
-  border-radius: 6px 0 0 6px;
-}
-.horizontal-card-container > .card:not(:first-child) {
-  margin-left: -1px;
-}
-.horizontal-card-container > .card:last-child {
-  border-radius: 0 6px 6px 0;
-}
-
-.vertical-card-container {
-  display: flex;
-  flex-direction: column;
-}
-.vertical-card-container > .card:first-child {
-  border-radius: 6px 6px 0 0;
-}
-.vertical-card-container > .card:not(:first-child) {
-  margin-left: 0px;
-  margin-top: -1px;
-}
-.vertical-card-container > .card:last-child {
-  border-radius: 0 0 6px 6px;
-}
-
-header {
-  height: 100%;
-  width: 250px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9;
-  overflow: auto;
-  background-color: var(--imp-background);
-  transition: background-color 0.3s ease;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-#theme-switch-ctr {
-  margin-left: auto;
-  justify-self: flex-end;
-  align-self: center;
-  margin-right: 10px;
-  text-align: center;
-  display: none;
-}
-
-.menu-list {
-  margin: 1em;
-}
-
-/*
-Elément du menu
-*/
-.menu-item {
-  padding: 0.5em;
-  border: 1px solid var(--border);
-  background-color: var(--background);
-  color: var(--color);
-  text-align: center;
-  font-size: larger;
-  transition: background-color 0.1s ease;
-}
-
-/*Elément du menu séléctionné*/
-.menu-item.selected-card,
-.menu-item:hover {
-  border-color: var(--border-focus);
-  color: var(--color-focus);
-  background-color: var(--background-focus);
-}
-
-.menu-item a {
-  padding: 0;
-  text-decoration: none;
-}
-
-@media only screen and (max-width: 875px) {
-  header {
-    position: relative;
-    width: 100%;
-    height: auto;
-  }
-
-  #theme-switch-ctr {
-    margin: 0 auto;
-    margin-top: 10px;
-  }
-}
-#main {
-  margin-left: 250px;
-  text-align: center;
-  padding: 15px;
-  height: 100%;
-}
-
-/*
-Hiérarchie :
--convertisseur
--groupe
--entree
-    -input
-    -label
-*/
-/*Elément d'un convertisseur*/
-.convertisseur {
-  margin: auto;
-  min-width: 600px;
-  max-width: 700px;
-  display: flex;
-  flex-direction: column;
-  font-size: 18px;
-}
-
-/*Elément d'un groupe du convertisseur*/
-.groupe > h1 {
-  position: sticky;
-  background-color: var(--imp-background);
-  top: 0px;
-  z-index: 3;
-  text-align: left;
-  padding: 10px;
-  border: solid 5px var(--imp-background);
-  border-radius: 6px;
-  transition: border-color 0.3s ease;
-}
-
-.groupe:focus-within > h1 {
-  border-color: var(--border-focus);
-}
-
-/*Contenant d'une entrée du convertisseur*/
-.entree {
-  width: 100%;
-  margin: 10px 0;
-}
-
-/*Input de l'entrée*/
-.entree > input {
-  display: block;
-  width: 100%;
-  padding: 8px 16px;
-  line-height: 25px;
-  -webkit-appearance: none;
-  color: var(--color);
-  border: 1px solid var(--border);
-  background: var(--background);
-  transition: border 0.3s ease;
-  font-size: 18px;
-  position: relative;
-  z-index: 1;
-  flex: 1 1 auto;
-}
-
-/*Label contenant l'unité*/
-.entree > label {
-  text-align: center;
-  padding: 8px 12px;
-  line-height: 25px;
-  color: var(--color);
-  background: var(--imp-background);
-  border: 1px solid var(--border);
-  transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
-  width: 250px;
-}
-
-/*
-Modifications de pseudo-classes et éléments : 
-*/
-/*
-"Placeholder" de l'input
-*/
-.entree > input::placeholder {
-  color: var(--placeholder);
-}
-
-.entree > input:focus {
-  outline: none;
-  border-color: var(--border-focus);
-}
-
-/*
-Lorsque l'on séléctionne l'entrée, on "illumine" le label correspondant
-*/
-.entree:focus-within > label {
-  color: var(--color-focus);
-  background: var(--background-focus);
-  border-color: var(--border-focus);
-}
-
-/*
-Styles pour la barre de définition de la précision
-*/
-#precision-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-#label-precision {
-  font-size: 1.25em;
-}
-
-#precision {
-  margin-bottom: 15px;
-}
-
-@media screen and (max-width: 875px) {
-  #main {
-    margin: 0;
-  }
-
-  .convertisseur {
-    min-width: 0 !important;
-  }
-}
-@media only screen and (max-width: 630px) {
-  .convertisseur {
-    width: 100% !important;
-  }
-
-  .entree {
-    display: flex;
-    flex-direction: column;
-  }
-  .entree > .card:first-child {
-    border-radius: 6px 6px 0 0;
-  }
-  .entree > .card:not(:first-child) {
-    margin-left: 0px;
-    margin-top: -1px;
-  }
-  .entree > .card:last-child {
-    border-radius: 0 0 6px 6px;
-  }
-
-  .entree > * {
-    width: 100% !important;
-  }
-
-  #label-precision {
-    margin-bottom: 15px;
-  }
-}
-footer {
-  width: 100%;
-  background-color: cyan;
-  text-align: center;
-  z-index: 2;
-}
-
-footer > h3 {
-  font-size: 20sp;
-}
-
-/*# sourceMappingURL=styles.css.map */
+@import 'header.css';
+@import 'main.css';
+@import 'footer.css';
